# trait_variable_macro

./: Cargo.toml  README.md
src/: cache.rs  func_macro.rs  lib.rs
tests/: basic.rs  func.rs  func_macro_for_trait_var.rs  refine_fn_body.rs  test_with_declarative_macro.rs  whole(old).rs  whole.rs
tests/common/: mod.rs  test_struct.rs
