[package]
    name="trait-variable-macros"
    version="0.1.0"
    edition="2021"
    description="Make variable fields feasible in trait definition(the procedural macros part)."
    repository="https://github.com/dbsxdbsx/trait_variable_macros"
    license="MIT"
    documentation="https://docs.rs/trait_variable_macros"
    categories=[
        "development-tools::cargo-plugins",
        "development-tools::build-utils",
        "language-implementations",
    ]
    readme="README.md"
    exclude=["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]
    keywords=["trait", "variable", "type", "macro", "code-generation"]

[lib]
    proc-macro=true

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[dependencies]
    quote      ="^1.0"
    proc-macro2="^1.0"
    syn        ={version="^1.0", features=["full"]}
    # syn        ={version="^2.0", features=["full"]}
    paste="^1.0"

    lazy_static="^1.4"
    once_cell  ="^1.8"

[dev-dependencies]
